--- a/src/app/components/production-order/production-order.component.html
+++ b/src/app/components/production-order/production-order.component.html
@@ -181,5 +181,7 @@
     </form>
 </ng-template>
 
-<ngb-toast class="text-light" *ngIf="toastMessage" [autohide]="true" (hidden)="onHideToast()"
-    [ngClass]="isError ? 'bg-danger' : 'bg-success'">{{toastMessage}}</ngb-toast>
+<div class="container">
+    <ngb-toast class="text-light toast-message" *ngIf="toastMessage" [autohide]="true" (hidden)="onHideToast()"
+        [ngClass]="isError ? 'bg-danger' : 'bg-success'">{{toastMessage}}</ngb-toast>
+</div>
