--- a/src/app/components/production-order/production-order.component.html
+++ b/src/app/components/production-order/production-order.component.html
@@ -57,11 +57,11 @@
                         </td>
                         <td>
                             <button
-                                *ngIf="authService.isInRole(['Menadzer']) && productionOrder.managerEmail && authService.isCurrentUserEmail(productionOrder.managerEmail)"
+                                *ngIf="authService.isInRole(['Admin', 'Menadzer']) && productionOrder.managerEmail && authService.isCurrentUserEmail(productionOrder.managerEmail)"
                                 type="button" class="btn btn-primary btn-edit"
                                 (click)="onClickUpdate($event, productionOrder)">Izmeni</button>
                             <button
-                                *ngIf="authService.isInRole(['Menadzer']) && productionOrder.managerEmail && authService.isCurrentUserEmail(productionOrder.managerEmail)"
+                                *ngIf="authService.isInRole(['Admin', 'Menadzer']) && productionOrder.managerEmail && authService.isCurrentUserEmail(productionOrder.managerEmail)"
                                 type="button" class="btn btn-danger"
                                 (click)="onClickDelete($event, productionOrder)">Obriši</button>
                         </td>
@@ -82,7 +82,7 @@
                 </select>
             </div>
 
-            <button *ngIf="authService.isInRole(['Menadzer'])" type="button" class="btn btn-primary btn-add"
+            <button *ngIf="authService.isInRole(['Admin', 'Menadzer'])" type="button" class="btn btn-primary btn-add"
                 (click)="onClickAdd()">Dodaj</button>
         </div>
     </div>
