Obrisan visak znak u html-u

--- a/src/app/components/technological-system/technological-system.component.html
+++ b/src/app/components/technological-system/technological-system.component.html
@@ -31,7 +31,7 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">Naziv tehnološkog sistema</th>>
+                        <th scope="col">Naziv tehnološkog sistema</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
