--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
                     <label for="password" [class.text-danger]="formGroup.get('password')?.invalid && 
                     (formGroup.get('password')?.dirty ||
                     formGroup.get('password')?.touched ||
-                    isSubmitted)">Password</label>
+                    isSubmitted)">Lozinka</label>
                     <input type="password" class="form-control" [class.is-invalid]="formGroup.get('password')?.invalid && 
                     (formGroup.get('password')?.dirty ||
                     formGroup.get('password')?.touched ||
