CRUD za materijal za predmet rada

--- a/src/app/components/object-of-labor-info/object-of-labor-info.component.html
+++ b/src/app/components/object-of-labor-info/object-of-labor-info.component.html
@@ -20,6 +20,14 @@
     </div>
 </div>
 
+<div *ngIf="objectOfLabor" class="container card procedures-section">
+    <div class="card-body">
+        <h5 class="card-title">Spisak potrebnih materijala</h5>
+        <app-object-of-labor-material *ngIf="objectOfLabor.objectOfLaborId"
+            [objectOfLaborId]="objectOfLabor.objectOfLaborId"></app-object-of-labor-material>
+    </div>
+</div>
+
 <div class="container">
     <ngb-toast class="text-light" *ngIf="toastMessage" [autohide]="true" (hidden)="onHideToast()"
         [ngClass]="isError ? 'bg-danger' : 'bg-success'">{{toastMessage}}</ngb-toast>
