--- a/src/app/components/object-of-labor-info/object-of-labor-info.component.html
+++ b/src/app/components/object-of-labor-info/object-of-labor-info.component.html
@@ -29,6 +29,6 @@
 </div>
 
 <div class="container">
-    <ngb-toast class="text-light" *ngIf="toastMessage" [autohide]="true" (hidden)="onHideToast()"
+    <ngb-toast class="text-light toast" *ngIf="toastMessage" [autohide]="true" (hidden)="onHideToast()"
         [ngClass]="isError ? 'bg-danger' : 'bg-success'">{{toastMessage}}</ngb-toast>
 </div>
