--- a/src/app/components/object-of-labor-info/object-of-labor-info.component.html
+++ b/src/app/components/object-of-labor-info/object-of-labor-info.component.html
@@ -24,7 +24,7 @@
     <div class="card-body">
         <h5 class="card-title">Spisak potrebnih materijala</h5>
         <app-object-of-labor-material *ngIf="objectOfLabor.objectOfLaborId"
-            [objectOfLaborId]="objectOfLabor.objectOfLaborId"></app-object-of-labor-material>
+            [objectOfLaborId]="objectOfLabor.objectOfLaborId" [showAdminButtons]="true"></app-object-of-labor-material>
     </div>
 </div>
 
